Fix issue - Margin bottom is to big on mobile screen.

--- a/company_website/static/how_we_work/partials/time_materials_fixed_price_graph.sass
+++ b/company_website/static/how_we_work/partials/time_materials_fixed_price_graph.sass
@@ -14,6 +14,7 @@
 
 			@media only screen and (max-width: $sm-screen-size)
 				max-width: 100%
+				margin-bottom: 50px
 
 			.row.title
 
